Add last year's vision code

--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,17 @@
  */
 
 buildscript {
+    ext {
+        kotlin_version = '1.9.20-Beta'
+    }
     repositories {
         mavenCentral()
         google()
     }
     dependencies {
         // Note for FTC Teams: Do not modify this yourself.
-        classpath 'com.android.tools.build:gradle:7.2.0'
+        classpath 'com.android.tools.build:gradle:8.1.1'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
