--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -14,16 +14,35 @@
 // Include common definitions from above.
 apply from: '../build.common.gradle'
 apply from: '../build.dependencies.gradle'
+apply plugin: 'org.jetbrains.kotlin.android'
 
 android {
     namespace = 'org.firstinspires.ftc.teamcode'
+    androidResources {
+        noCompress 'tflite'
+    }
 
     packagingOptions {
+        jniLibs {
+            pickFirsts += ['**/*.so']
+        }
         jniLibs.useLegacyPackaging true
     }
 }
 
 dependencies {
     implementation project(':FtcRobotController')
+    implementation 'androidx.core:core-ktx:1.12.0'
+
+    implementation 'org.openftc:easyopencv:1.7.0'
+    implementation 'org.apache.commons:commons-math3:3.6.1'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7'
+    implementation 'com.acmerobotics.roadrunner:core:1.0.0-beta1'
+    implementation 'com.acmerobotics.roadrunner:actions:1.0.0-beta1'
+
+    implementation 'org.ftclib.ftclib:core:2.1.1'
+    // the following is optional if you want vision
+    implementation 'org.ftclib.ftclib:vision:2.1.0'
+
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
 }
