--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -2,6 +2,12 @@ repositories {
     mavenCentral()
     google() // Needed for androidx
     maven { url = 'https://maven.brott.dev/' }
+    maven { url = 'https://jitpack.com' }
+}
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
 }
 
 dependencies {
@@ -19,6 +25,5 @@ dependencies {
     runtimeOnly 'org.tensorflow:tensorflow-lite:2.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.acmerobotics.dashboard:dashboard:0.4.12'
-    implementation 'com.github.deltacv:AprilTagDesktop:1.1.0'
 }
 
