--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -28,6 +28,14 @@ android {
         }
         jniLibs.useLegacyPackaging true
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    kotlinOptions {
+        jvmTarget = "1.8"  // Match this with your Java target version
+    }
 }
 
 dependencies {
@@ -46,6 +54,8 @@ dependencies {
     implementation 'org.ftclib.ftclib:core:2.1.1'
     // the following is optional if you want vision
     implementation 'org.ftclib.ftclib:vision:2.1.0'
+
+    implementation 'org.openftc:apriltag:2.0.0'
 
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
 }
